2003-11-16  Scott Dattalo  <scott@dattalo.com>
	* gui/* More conversions to C++

2003-11-15  Scott Dattalo  <scott@dattalo.com>
	* gui/* started converting gui struct's into C++ classes. Started with 
	Register Window.
	
2003-10-26  Scott Dattalo  <scott@dattalo.com>
	* src/gpsim-time.cc linked-list bug fixes.

2003-10-26  Scott Dattalo  <scott@dattalo.com>
	* eXdbm/* applied patch from  Borut Razem mailto:borut.razem@siol.net to
	fix an uninitialized pointer bug.
	
2003-10-26  Scott Dattalo  <scott@dattalo.com>
	* modules/* removed all references to gui if not building with the gui

2003-09-24  Scott Dattalo  <scott@dattalo.com> (patches from Steve Tell)
	* modules/paraface.h - Solaris patch for bogus device
	* src/cod.cc - Endian bug
	* gui/gui_processor.cc - use memset instead of bzero.
	
2003-09-14  Scott Dattalo  <scott@dattalo.com>
 	* src/gpsim_time.h - changed cycle counter break point from a Singly linked
	list to a doubly linked list. This is in preparation for separating module
	time from pic processor time so that when the PIC goes to sleep, time 
	doesn't stop.
	
2003-09-07  Scott Dattalo  <scott@dattalo.com>
	* src/p16f62x.h - duplicate declaration of intcon register
	
2003-09-07  Scott Dattalo  <scott@dattalo.com>
	* src/breakpoints.cc - this time the 'Too many cycle counter breakpoints' was
	fixed. BTW the problem was that 'clear_break' was not putting the cleared
	breakpoint back into the 'inactive' list
	
2003-09-07  Scott Dattalo  <scott@dattalo.com>
	* src/pic_processor.cc -- Fixed the "Too many cycle counter breakpoints" bug
	* src/interface.cc        It turns out that the "realtime" stuff was 
	* src/breakpoints.cc      1) duplicating a class declaration. 2) not clearing
	* src/breakpoints.h       cycle counter break points.
	* gpsim.sln - added for win32 port.
	
2003-08-30  Scott Dattalo  <scott@dattalo.com>
	* src/p12x.cc -- The 12c5xx will reset if an I/O is toggled and the processor
	is sleeping.
